[gd_scene load_steps=9 format=2]

[ext_resource path="res://Miscellaneous Demos/(kedalovo) Clicking Objects through Viewports/demo.gd" type="Script" id=1]
[ext_resource path="res://Miscellaneous Demos/(kedalovo) Clicking Objects through Viewports/spatialroot.gd" type="Script" id=2]




[sub_resource type="OpenSimplexNoise" id=1]

[sub_resource type="NoiseTexture" id=2]
width = 1080
height = 768
noise = SubResource( 1 )

[sub_resource type="ViewportTexture" id=3]
viewport_path = NodePath("Spacial_Viewport")

[sub_resource type="SphereShape" id=4]

[sub_resource type="SphereMesh" id=5]

[sub_resource type="SpatialMaterial" id=6]
albedo_color = Color( 0.14902, 0.47451, 0.647059, 1 )

[node name="Demo_Node2D" type="Node2D"]
script = ExtResource( 1 )

[node name="Background" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
texture = SubResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Viewport_TextureRect" type="TextureRect" parent="."]
margin_left = 295.302
margin_top = 171.666
margin_right = 835.302
margin_bottom = 555.666
texture = SubResource( 3 )
expand = true
flip_v = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Spacial_Viewport" type="Viewport" parent="."]
size = Vector2( 1080, 768 )
transparent_bg = true

[node name="SpatialRoot" type="Spatial" parent="Spacial_Viewport"]
script = ExtResource( 2 )

[node name="Camera" type="Camera" parent="Spacial_Viewport/SpatialRoot"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 1 )

[node name="DirectionalLight" type="DirectionalLight" parent="Spacial_Viewport/SpatialRoot"]
transform = Transform( 0.707107, -0.5, 0.5, 0, 0.707107, 0.707107, -0.707107, -0.5, 0.5, 3, 3, 3 )

[node name="Clickable_Object_Area" type="Area" parent="Spacial_Viewport/SpatialRoot"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -2 )

[node name="Sphere_CollisionShape" type="CollisionShape" parent="Spacial_Viewport/SpatialRoot/Clickable_Object_Area"]
shape = SubResource( 4 )

[node name="Sphere_MeshInstance" type="MeshInstance" parent="Spacial_Viewport/SpatialRoot/Clickable_Object_Area"]
mesh = SubResource( 5 )
material/0 = SubResource( 6 )
[connection signal="gui_input" from="Viewport_TextureRect" to="." method="_on_Viewport_TextureRect_gui_input"]
